modification backend+frontend (Club+Shop)