@@ -1,5 +1,18 @@
 package fr.n7.hagymont.config;
 
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import javax.crypto.SecretKey;
+
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.web.filter.OncePerRequestFilter;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
@@ -9,56 +22,48 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
-import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.AuthorityUtils;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.filter.OncePerRequestFilter;
-
-import javax.crypto.SecretKey;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
 public class JwtTokenValidator extends OncePerRequestFilter {
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        String jwt = request.getHeader(JwtConstant.JWT_HEADER);
-        System.out.println("JWT Token in JwtTokenValidator: " + jwt);
-        if (jwt != null && jwt.startsWith("Bearer ")) {
-            jwt = jwt.substring(7);
-            
-            System.out.println("JWT Token in JwtTokenValidator: " + jwt);
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+            throws ServletException, IOException {
+
+        String jwtHeader = request.getHeader(JwtConstant.JWT_HEADER);
+        if (jwtHeader != null && jwtHeader.startsWith("Bearer ")) {
+            String jwt = jwtHeader.substring(7);
             try {
                 SecretKey key = Keys.hmacShaKeyFor(JwtConstant.SECRET_KEY.getBytes());
-                @SuppressWarnings("deprecation")
-                Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(jwt).getBody();
-                System.out.print(claims);
+                Claims claims = Jwts.parserBuilder()
+                        .setSigningKey(key)
+                        .build()
+                        .parseClaimsJws(jwt)
+                        .getBody();
 
-                String username = String.valueOf(claims.get("username"));
-                System.out.print(username);
+                // Ensure username exists
+                String username = claims.getSubject();
+                if (username == null) {
+                    throw new BadCredentialsException("Missing username");
+                }
 
-                String rolesString = String.valueOf(claims.get("authorities"));
-                List<String> roles = List.of(rolesString.split(","));
-                List<SimpleGrantedAuthority> authorities = roles.stream()
-                    .map(s -> new SimpleGrantedAuthority(s))
-                    .toList();
-                Authentication authentication;
-                authentication = new UsernamePasswordAuthenticationToken(username, null, authorities);
+                // Handle empty or invalid roles
+                String rolesString = claims.get("authorities", String.class);
+                if (rolesString == null) {
+                    rolesString = "";
+                }
+                List<SimpleGrantedAuthority> authorities
+                        = Arrays.stream(rolesString.split("\\s*,\\s*"))
+                                .filter(role -> !role.trim().isEmpty())
+                                .map(SimpleGrantedAuthority::new)
+                                .collect(Collectors.toList());
+
+                Authentication authentication = new UsernamePasswordAuthenticationToken(
+                        username, null, authorities
+                );
                 SecurityContextHolder.getContext().setAuthentication(authentication);
-
             } catch (Exception e) {
                 throw new BadCredentialsException("Invalid token", e);
             }
         }
-
         filterChain.doFilter(request, response);
     }
 }
